# cusymint

./: .clang-format  .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  docker-compose.ghcr.yml  docker-compose.yml  melos.yaml  pubspec.yaml
.dart_tool/: package_config.json
.github/: labeler.yml
.github/workflows/: engine-release.yaml  front-release-docker.yaml  frontend-release-docker.yaml  frontend-tests.yaml
engine/: .clang-format  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile
engine/parser/: parser.cpp
engine/src/: Performance.cu  Performance.cuh  main.cu  main_server.cu
engine/src/Evaluation/: Collapser.cu  Collapser.cuh  ComputationHistory.cu  ComputationHistory.cuh  Integrate.cu  Integrate.cuh  IntegrateKernels.cu  Integrator.cu  Integrator.cuh  IntegratorKernels.cu  IntegratorKernels.cuh  StaticFunctions.cu  StaticFunctions.cuh  Status.cuh  TransformationType.cu  TransformationType.cuh
engine/src/Evaluation/Heuristic/: BringOutConstantsFromProduct.cu  BringOutConstantsFromProduct.cuh  Heuristic.cu  Heuristic.cuh  IntegrateByParts.cu  IntegrateByParts.cuh  LinearSubstitution.cu  LinearSubstitution.cuh  SplitSum.cu  SplitSum.cuh  SubstituteEToX.cu  SubstituteEToX.cuh  TrigonometricSubstitutions.cu  TrigonometricSubstitutions.cuh  UniversalSubstitution.cu  UniversalSubstitution.cuh
engine/src/Evaluation/KnownIntegral/: ConstantIntegral.cu  ConstantIntegral.cuh  KnownIntegral.cu  KnownIntegral.cuh  NonElementary.cu  NonElementary.cuh  PowerFunction.cu  PowerFunction.cuh  SimpleArctan.cu  SimpleArctan.cuh  SimpleArctanArcsine.cu  SimpleArctanArcsine.cuh  SimpleExponent.cu  SimpleExponent.cuh  SimpleSineCosine.cu  SimpleSineCosine.cuh  SimpleTangentCotangent.cu  SimpleTangentCotangent.cuh  SimpleVariable.cu  SimpleVariable.cuh  XInverse.cu  XInverse.cuh
engine/src/Parser/: Parser.cu  Parser.cuh  Parser.hpp  Scanner.cu  Scanner.cuh  Scanner.hpp
engine/src/Server/: JsonFormatter.cu  JsonFormatter.cuh  JsonSolver.cu  JsonSolver.cuh  Logger.cu  Logger.cuh  ResponseBuilder.cu  ResponseBuilder.cuh  Server.cu  Server.cuh  Solver.cuh  SolverProcessManager.cu  SolverProcessManager.cuh  Utils.cuh
engine/src/Solver/: Cache.cu  CachedParser.cu  CachedParser.cuh  Expression.cu  Expression.cuh  Solver.cu  Solver.cuh
engine/src/Symbol/: Addition.cu  Addition.cuh  Constants.cu  Constants.cuh  ErrorFunction.cu  ErrorFunction.cuh  ExpanderPlaceholder.cu  ExpanderPlaceholder.cuh  ExpressionArray.cu  ExpressionArray.cuh  Hyperbolic.cu  Hyperbolic.cuh  Integral.cu  Integral.cuh  IntegralFunctions.cu  IntegralFunctions.cuh  InverseTrigonometric.cu  InverseTrigonometric.cuh  Logarithm.cu  Logarithm.cuh  Macros.cuh  MetaOperators.cuh  Polynomial.cu  Polynomial.cuh  Power.cu  Power.cuh  Product.cu  Product.cuh  ReverseTreeIterator.cuh  Sign.cu  Sign.cuh  SimplificationResult.cuh  Solution.cu  Solution.cuh  SubexpressionCandidate.cu  SubexpressionCandidate.cuh  SubexpressionVacancy.cu  SubexpressionVacancy.cuh  Substitution.cu  Substitution.cuh  (+10 more)
engine/src/Symbol/Simplification/: AdditionSimplification.cu  AdditionSimplification.cuh
engine/src/Utils/: CompileConstants.cuh  Cuda.cu  Cuda.cuh  DeviceArray.cuh  Globalization.cuh  Math.unused.cuh  Meta.cuh  OptionalNumber.cuh  Order.cuh  Pair.cuh  PascalTriangle.cuh  Result.cuh  SimplificationResult.cuh  StaticStack.cuh
engine/test/: .clangd  AdvancedIntegral.cu  AdvancedIntegrals.cu  Collapser.cu  Derivatives.cu  ExpressionArray.cu  Heuristic.cu  IntegralCommons.cu  IntegralCommons.cuh  Kernels.cu  KnownIntegral.cu  Simplify.cu  Simplify.cuh  Symbol.cu  TestUtils.cuh  test.cu
engine/test/Evaluation/: Collapser.cu  ComputationHistory.cu  IntegratorUtils.cu  IntegratorUtils.cuh  Kernels.cu
engine/test/Math/: PascalTriangle.cu
engine/test/Parser/: Parser.cu  Scanner.cu
engine/test/Symbol/: MetaOperators.cu
front/: .gitignore
front/cusymint_app/: .gitignore  Dockerfile  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml
front/cusymint_app/lib/: main.dart  services_provider.dart
front/cusymint_app/linux/: CMakeLists.txt  my_application.cc
front/cusymint_app/test/: widget_test.dart
front/cusymint_app/web/: index.html  manifest.json
front/cusymint_app/windows/: CMakeLists.txt
front/cusymint_assets/: pubspec.yaml
front/cusymint_assets/lib/: cusymint_assets.dart
front/cusymint_client/: pubspec.yaml
front/cusymint_client/cusymint_client_interface/: .gitignore  pubspec.yaml
front/cusymint_client/cusymint_client_json_rpc/: pubspec.yaml
front/cusymint_client/cusymint_client_mock/: pubspec.yaml  pubspec_overrides.yaml
front/cusymint_client/integration_test/: json_rpc_integration_test.dart
front/cusymint_client/lib/: cusymint_client.dart
front/cusymint_client/test/: json_rpc_test.dart
front/cusymint_integrals/: pubspec.yaml
front/cusymint_integrals/.dart_tool/: package_config.json
front/cusymint_integrals/lib/: cusymint_integrals.dart
front/cusymint_l10n/: pubspec.yaml
front/cusymint_storybook/: README.md  pubspec.yaml  pubspec_overrides.yaml
front/cusymint_ui/: pubspec.yaml  pubspec_overrides.yaml
src/: TreeIterator.cuh  addition.cu  addition.cuh  constants.cu  constants.cuh  cuda_utils.cu  cuda_utils.cuh  expander_placeholder.cu  expander_placeholder.cuh  integral.cu  integral.cuh  integral_expression.cu  integral_expression.cuh  integrate.cu  integrate.cuh  inverse_trigonometric.cu  inverse_trigonometric.cuh  main.cu  power.cu  power.cuh  product.cu  product.cuh  solution.cu  solution.cuh  substitution.cu  substitution.cuh  symbol.cu  symbol.cuh  symbol_defs.cuh  trigonometric.cu  trigonometric.cuh  unknown.cu  unknown.cuh  variable.cu  variable.cuh
src/Evaluation/: Integrate.cu
src/Symbol/: Constants.cu  Constants.cuh  ExpanderPlaceholder.cuh  Integral.cu  Integral.cuh  Macros.cuh  Power.cu  Power.cuh  Product.cu  Solution.cu  Solution.cuh  Substitution.cu  Symbol.cu  Symbol.cuh  SymbolType.cuh  Trigonometric.cuh  Unknown.cu  Variable.cu  Variable.cuh
src/parser/: parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
(+157 files in other folders)
